---
source: packages/beff-core/tests/print_parser.rs
expression: "decoder(r#\"\n        export type Alias = `${number}__${number}`\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
---
function ValidateAlias(ctx, input) {
    return (hoisted_Alias_0.validateRegexDecoder.bind(hoisted_Alias_0))(ctx, input);
}
function ParseAlias(ctx, input) {
    return (hoisted_Alias_0.parseRegexDecoder.bind(hoisted_Alias_0))(ctx, input);
}
const validators = {
    Alias: ValidateAlias
};
const parsers = {
    Alias: ParseAlias
};
const hoisted_Alias_0 = new RegexDecoder(/(\d+(\.\d+)?)(__)(\d+(\.\d+)?)/, "${number}__${number}");

